@@ -1,4 +1,4 @@
-@set UPDATED 6 April 2005
+@set UPDATED 4 April 2005
 @set UPDATED-MONTH April 2005
 @set EDITION 2.1.4
 @set VERSION 2.1.4
